--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "got": "^12.6.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sha1": "^1.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
