--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "got": "^10.4.0",
-    "morgan": "^1.10.0",
+    "morgan": "^1.10.0"
   },
   "engines": {
     "node": ">=16.0.0"
